--- a/MoviesApp/MoviesApp/Screens/Cells/Home/View/HomeScreenEnlargedCell.xib
+++ b/MoviesApp/MoviesApp/Screens/Cells/Home/View/HomeScreenEnlargedCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="HomeScreenEnlargedCell" customModule="MoviesApp" customModuleProvider="target">
+        <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="HomeScreenEnlargedCell" customModule="MoviesApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="348" height="196"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -40,7 +40,7 @@
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cV0-3t-8nA" userLabel="Information Container View">
                                 <rect key="frame" x="153.33333333333337" y="56.999999999999993" width="184.66666666666663" height="82.333333333333314"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Y7-G0-zFh" userLabel="Title Label">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Y7-G0-zFh" userLabel="Title Label">
                                         <rect key="frame" x="0.0" y="0.0" width="42.666666666666664" height="20.333333333333332"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
@@ -92,6 +92,7 @@
                                     <constraint firstItem="6Ne-Tb-bYJ" firstAttribute="bottom" secondItem="EXz-oU-ReC" secondAttribute="top" constant="-10" id="X1N-vU-7FC"/>
                                     <constraint firstItem="EXz-oU-ReC" firstAttribute="leading" secondItem="cV0-3t-8nA" secondAttribute="leading" id="eWm-jM-g1U"/>
                                     <constraint firstItem="6Ne-Tb-bYJ" firstAttribute="leading" secondItem="cV0-3t-8nA" secondAttribute="leading" id="jdV-tl-z3W"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="1Y7-G0-zFh" secondAttribute="trailing" id="o7X-7j-xX2"/>
                                     <constraint firstAttribute="bottom" secondItem="6Ne-Tb-bYJ" secondAttribute="bottom" constant="34.999999999999986" id="uJs-uo-yRN"/>
                                 </constraints>
                             </view>
